Source/WebCore/editing/ios/EditorIOS.mm
@@ -38,6 +38,7 @@
 #include "Frame.h"
 #include "FrameLoaderClient.h"
 #include "HTMLConverter.h"
+#include "HTMLImageElement.h"
 #include "HTMLInputElement.h"
 #include "HTMLNames.h"
 #include "HTMLParserIdioms.h"
@@ -579,14 +580,14 @@ RefPtr<DocumentFragment> Editor::createFragmentForImageResourceAndAddResource(Re
     if (!resource)
         return nullptr;
 
-    Ref<Element> imageElement = m_frame.document()->createElement(HTMLNames::imgTag, false);
-
     NSURL *URL = resource->url();
-    imageElement->setAttribute(HTMLNames::srcAttr, [URL isFileURL] ? [URL absoluteString] : resource->url());
+    String resourceURL = [URL isFileURL] ? [URL absoluteString] : resource->url();
 
-    // FIXME: The code in createFragmentAndAddResources calls setDefersLoading(true). Don't we need that here?
     if (DocumentLoader* loader = m_frame.loader().documentLoader())
         loader->addArchiveResource(resource.releaseNonNull());
+
+    auto imageElement = HTMLImageElement::create(*m_frame.document());
+    imageElement->setAttributeWithoutSynchronization(HTMLNames::srcAttr, resourceURL);
 
     auto fragment = m_frame.document()->createDocumentFragment();
     fragment->appendChild(imageElement);
